--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,6 +1,6 @@
 #** GENERATED CONTENT ** Mule Application Deployment Descriptor
-#Wed Jun 06 10:49:20 IST 2018
+#Wed Jun 06 11:55:22 IST 2018
 redeployment.enabled=true
 encoding=UTF-8
-config.resources=demo2.xml,helloworld.xml
 domain=default
+config.resources=demo2.xml
